fixing paragraph spacing, and dissapearing card-title when no image; added hrs and dividers; all to sidecard

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -86,7 +86,7 @@ a {
   background-color: $clr-orange;
 
   &:hover {
-    background-color: $clr-orange-dark;
+    background-color: darken($clr-orange, 20%);
   }
 }
 
